ECOPROJECT-3992 | feat: sizer - support hosted control plane nodes
